#+TITLE: Changelog

* Unreleased
** Changed
   - docs: rewrite `:dev` aliases introduction
   - alias: `:test/cloverage` corrected to `:test/coverage`

* 2023-08-02
** Changed
   - ci: exclude clojurescript from antq version check
   - ~:project/create~ version 2023-08-01 of practicalli/project-templates
   - ci: spell lychee & repository trufflehog linters warn only (false positives) 
   - ~:project/create~ version 2023-08-01 of practicalli/project-templates

* 2023-07-26
** Added
   - ~:project/create~ version 2023-07-14 of practicalli/project-templates
   - ~:project/create~ version 2023-07-26 of practicalli/project-templates

* 2023-07-01
** Added
*** alias: `:test/run-all` kaocha runner with `:fail-fast false` to run all tests regardless of failing tests
*** ci: megalinter GitHub action version java@7 in megalinter.yaml workflow
*** ci: scheduled monthly version check

** Updated
*** Update library versions using `make outdated`

    | :name                                |  :current |   :latest |
    |--------------------------------------+-----------+-----------|
    | com.github.jpmonettas/flow-storm-dbg |     3.6.2 |     3.6.5 |
    | com.github.liquidz/antq              |  2.4.1070 |  2.5.1089 |
    | djblue/portal                        |    0.41.0 |    0.42.0 |
    | io.github.nextjournal/clerk          |  0.13.842 |  0.14.919 |
    | lambdaisland/kaocha                  | 1.84.1335 | 1.85.1342 |
    | zprint/zprint                        |     1.2.6 |     1.2.7 |

*** Monthly version update using `make outdated`

    | :name                                | :current |  :latest |
    |--------------------------------------+----------+----------|
    | cider/cider-nrepl                    |   0.30.0 |   0.31.0 |
    | com.github.jpmonettas/flow-storm-dbg |    3.6.5 |    3.6.7 |
    | com.github.liquidz/antq              | 2.5.1089 | 2.5.1095 |
    | com.github.seancorfield/next.jdbc    |  1.3.874 |  1.3.883 |