@@ -20,7 +20,7 @@ jobs:
 
       # Git Checkout
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           token: "${{ secrets.PAT || secrets.GITHUB_TOKEN }}"
       - run: echo "🐙 ${{ github.repository }} repository was cloned to the runner."
