@@ -28,7 +28,7 @@ jobs:
 
       # Git Checkout
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           token: "${{ secrets.PAT || secrets.GITHUB_TOKEN }}"
           fetch-depth: 0
